--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
-    <title>Contactez nous</title>
+    <title>La Panthère - Contact</title>
 
     
 <!-- Analytics -->
