--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 	
     <title>La Panthère - Accueil</title>
 
-    <script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-
+    <!--<script src="./js/jquery-2.1.0.js"></script>-->
+	<!-- <script src="./js/bootstrap.js"></script>-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" defer="defer"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous" defer="defer"></script>
+	
 <!-- Analytics -->
  
 <!-- Analytics END -->
