--- a/index.html
+++ b/index.html
@@ -225,22 +225,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+								<a class="social" href="index.html" aria-label="logo Twitter"><span class="fa fa-twitter icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+								<a class="social" href="index.html" aria-label="logo Facebook"><span class="fa fa-facebook icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="index.html" aria-label="logo Ballons de basket"><span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+								<a class="social" href="index.html" aria-label="logo instagram"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
 					</div>					
